# config_spec

./: LICENSE  README.md  pyproject.toml  setup.py
config_spec/: __init__.py  config_spec.py
