[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "config_spec"
version = "0.0.3"
authors = [
  { name="Dibya Ghosh", email="dibya.ghosh@berkeley.edu" },
]
description = "JSON-parseable configuration of classes and functions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dibyaghosh/config_spec"
